# FalsTerm

./: Cargo.toml  README.md
examples/: minimal.rs
src/: core.rs  lib.rs
